# score_bazel-tools-cc

./: .bazelrc  BUILD  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  project_config.bzl  versions.json
.github/workflows/: tests-main-workspace.yaml  tests-test-workspace.yaml
bazel/: github.bzl
bazel/buildifier/: BUILD
bazel/toolchains/: toolchains.bzl
bazel/toolchains/python/: BUILD  versions.bzl
quality/: BUILD  defs.bzl
quality/private/clang_format/: README.md  clang_format_aspect.bzl  clang_format_config.bzl  clang_format_providers.bzl
quality/private/clang_format/tool/: BUILD  clang_format_runner.py
quality/private/clang_tidy/: BUILD  README.md  tidy_aspect.bzl  tidy_checks.bzl  tidy_config.bzl  tidy_helper.bzl  tidy_providers.bzl  tidy_runner.bzl  tidy_suite.bzl
quality/private/clang_tidy/examples/: BUILD  example.cpp  example.h  example_header_only.h
quality/private/clang_tidy/support/: BUILD  clang_tidy_local.sh  clang_tidy_wrapper.tpl  tidy_binary.bzl  tidy_files.bzl
quality/private/clang_tidy/test/: .clang-tidy-all-checks  .clang-tidy-bugprone-checks  .clang-tidy-no-checks  BUILD  README.md  custom_tidy_suites.bzl  lib_no_finding.c  lib_no_finding.cpp  lib_one_finding.cpp  lib_one_finding_via_conditional_include.cpp  lib_one_finding_via_included_header.c  lib_one_finding_via_included_header.cpp  lib_one_finding_via_system_header.cpp  lib_summary.cpp  tidy_evaluator.sh  (+2 more)
quality/private/common/: cc_helper.bzl  common.bzl
scripts/: run_all_tests.sh
test/: .bazelrc  .clang-tidy  BUILD  MODULE.bazel  WORKSPACE  awesome_config.yaml  awesome_config_c.yaml  clean.cpp  run_all_tests.sh  test.c  test.cpp  test.h  win_clang_tidy.sh
(+28 files in other folders)
