# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_bazel_tools_cc_test",
    version = "0.0.0",
    compatibility_level = 1,
)

##########################
# Internal dependencies. #
##########################

bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.1.1")

###################
# LLVM toolchain. #
###################

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "15.0.2",
    stdlib = {"linux-x86_64": "stdc++"},
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

###########################################
# Dependencies from score_bazel_tools_cc. #
###########################################

bazel_dep(name = "score_bazel_tools_cc", version = "3.9.0", repo_name = "score_bazel_tools_cc")
local_path_override(
    module_name = "score_bazel_tools_cc",
    path = "..",
)
